# ctf-tool

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  main.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
ctftool/: __init__.py  app.py  cli.py  gui.py
ctftool/core/: config.py  flag_finder.py  history.py  i18n.py  i18n_en.json  i18n_zh.json  integrity.py  scanner.py  utils.py
ctftool/modules/: blockchain.py  crypto.py  forensics.py  misc.py  pwn.py  reverse.py  web.py
ctftool/ui/: screens.py  styles.tcss  widgets.py
docs/: USAGE.md
tests/: conftest.py  test_blockchain.py  test_cli.py  test_crypto.py  test_flag_finder.py  test_forensics_reverse.py  test_history.py  test_i18n.py  test_integration.py  test_integrity.py  test_misc.py  test_pwn.py  test_scanner.py  test_web.py
